--- a/static/config-spa.json
+++ b/static/config-spa.json
@@ -5,7 +5,7 @@
     "enabled": true,
     "host": "http://localhost/",
     "name": "applitutoriel-service",
-    "staticPath": "/static"
+    "staticPath": "/static-5.1.0-PUB"
    },
   "services": {
     "host": "http://localhost/",
