Correction image qui ne son pas visible

--- a/static/config-spa.json
+++ b/static/config-spa.json
@@ -37,5 +37,5 @@
       }
     ]
   },
-   "themeUrl": "/hornet-showroom-online/static/hornet-themes"
+   "themeUrl": "/hornet-showroom-online/static-5.1.0-PUB/hornet-themes"
 }
