--- a/static/config-spa.json
+++ b/static/config-spa.json
@@ -1,5 +1,5 @@
 {
-    "contextPath": "hornetshowroom-spa",
+    "contextPath": "hornet-showroom-online",
     "welcomePage": "/accueil",
     "communityLink": {
         "git": {
